--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
-  language: go
-  go:
-    - "1.11"
+language: go
+go:
+  - "1.11"
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
