--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,38 +5,23 @@ on:
     tags:
       - v*
 
-
 jobs:
 
   build:
-    name: Build
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
 
-    - name: Set up Go 1.14
-      uses: actions/setup-go@v1
+    - name: Set up Go
+      uses: actions/setup-go@v2
       with:
-        go-version: 1.14
-      id: go
-
-    - name: clone OGame Base
-      env:
-        SUPER_SECRET: ${{ secrets.BITBUCKETPASS }}
-      run: git clone https://github.com/0xE232FE/ogame.mod.git ../ogame
-      
+        go-version: 1.15
+    
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
     - name: Build
       run: |
-        zip -r template.zip template/
         sed -i "s/var IsDevelopment = true/var IsDevelopment = false/g" Logger/Logger.go
         #for GOOSV in darwin linux; do
           #for GOARCHV in 386 amd64; do
@@ -52,14 +37,4 @@ jobs:
             env GOOS=$GOOSV GOARCH=$GOARCHV CGO_ENABLED=0 go build -v -a -ldflags '-s -w' -o ./bin/ogame-bot-$GOOSV-$GOARCHV.exe
           done
         done
-
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          ./bin/ogame-bot*
-          template.zip
-          updateApp.sh
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
