--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,11 @@ jobs:
           done
         done
         
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: |
+          ./bin/ogame-bot*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
