--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,14 +23,8 @@ jobs:
         #for GOOSV in darwin linux; do
           #for GOARCHV in 386 amd64; do
         for GOOSV in linux; do
-          for GOARCHV in amd64; do
+          for GOARCHV in amd64 arm arm64; do
             #env GOOS=$GOOSV GOARCH=$GOARCHV CGO_ENABLED=0 go build -v -a -ldflags '-s -w' -o ./bin/ogame-bot-$GOOSV-$GOARCHV
-            env GOOS=$GOOSV GOARCH=$GOARCHV CGO_ENABLED=0 go build -v -a -ldflags '-s -w' -o ./bin/ogame-bot-$GOOSV-$GOARCHV
-          done
-          for GOARCHV in arm; do
-            env GOOS=$GOOSV GOARCH=$GOARCHV CGO_ENABLED=0 go build -v -a -ldflags '-s -w' -o ./bin/ogame-bot-$GOOSV-$GOARCHV
-          done
-          for GOARCHV in arm64; do
             env GOOS=$GOOSV GOARCH=$GOARCHV CGO_ENABLED=0 go build -v -a -ldflags '-s -w' -o ./bin/ogame-bot-$GOOSV-$GOARCHV
           done
         done
